﻿0.9.0
=====

New Features:

  * Signficant updates to the syntax parser, including support for additional
    HTML tags and XHTML transitional validation of tag attributes.
  * Support the #if: parser function.  Usage: {{#if: test | true | false}}.
  * Add the ability for sysadmins to create user accounts (hanspeterklapf).
  * Topic add/update is now significantly faster due to query refactoring
    and changes so that the search index is not re-optimized after every
    add/update.
  * Search engine optimizations.  Existing JAMWiki installs may want to
    rebuild their search index.
  * Automatically populate sample JDBC values based on database type on the
    setup and admin pages.
  * Remove all dependencies on Spring from the jamwiki-core project by
    converting org.jamwiki.model.Role to an interface and creating a new
    org.jamwiki.authentication.RoleImpl class.
  * Upgrade to Spring Framework 3.0.0.RC2.
  * Upgrade to Spring Security 3.0.0.RC1.
  * Upgrade to Lucene Search 3.0.0.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.
  * Upgrade to JUnit 4.7.

Bugfixes:

  * Leading whitespace should be trimmed from category names such as
    "Category: Test" or "Category : Test".
  * Special:Import and Special:Export code refactored to avoid OOM errors with
    topics that have extensive history.

Translation Updates:


0.8.2
=====

New Features:

  * Updated spam filter patterns.
  * Update the default StartingPoints page with additional help info.

Bugfixes:

  * Fix MS SQL error when viewing topic history (hanspeterklapf).

Translation Updates:

  * Updated French translations (Guillaume_FRANCOIS55).
  * Updated German translations (axelclk).


0.8.1
=====

Bugfixes:

  * A link from a topic page to itself should be formatted as plain bold text,
    not as a link.  Reported by floatingworld.
  * XML imports of redirect topics were not redirecting properly.
  * Fix non-fatal MySQL upgrade warnings.  Reported by an anonymous user.